Mask render bug, one pixel black line #43908

Closed
opened 2015-03-06 14:32:45 +01:00 by José Ricarte · 15 comments

System Information
Ubuntu 14.04
renderer: 'GeForce GT 630/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.4.0 NVIDIA 331.113'

Blender Version
version 2.73 (sub 9), branch b'master', commit date b'2015-03-04' b'22:10', hash b'90e1b83', b'Release'
build date: b'2015-03-05', b'02:59:53'
platform: b'Linux:64bit'

Short description of error

When render, appears a black vertical line on the right side of the image
see atached image

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Ubuntu 14.04 renderer: 'GeForce GT 630/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.4.0 NVIDIA 331.113' **Blender Version** version 2.73 (sub 9), branch b'master', commit date b'2015-03-04' b'22:10', hash b'90e1b83', b'Release' build date: b'2015-03-05', b'02:59:53' platform: b'Linux:64bit' **Short description of error** When render, appears a black vertical line on the right side of the image see atached image **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ciriaco

Added subscriber: @ciriaco
Author

Line_bug_0.jpg

Line_bug_1.jpg

![Line_bug_0.jpg](https://archive.blender.org/developer/F147546/Line_bug_0.jpg) ![Line_bug_1.jpg](https://archive.blender.org/developer/F147548/Line_bug_1.jpg)
Author
[Bug_line.blend1](https://archive.blender.org/developer/F147551/Bug_line.blend1)
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Seems like you didn't pack the image into the .blend. You can do this e.g. by hitting Spacebar + typing/using "Pack All Into .blend"

Seems like you didn't pack the image into the .blend. You can do this e.g. by hitting Spacebar + typing/using "Pack All Into .blend"
Author

Don't need to upload an image to view the bug

Open the .blend file:
Bug_line.blend

Press F12 (render) and see the render image
the right side of the image

This black line that should not appear because doesn't exist in the scene

The black pixel line in the rendered image is a bug of the mask
Captura_de_pantalla_de_2015-03-06_19:20:59.jpg

Don't need to upload an image to view the bug Open the .blend file: [Bug_line.blend](https://archive.blender.org/developer/F147570/Bug_line.blend) Press F12 (render) and see the render image the right side of the image This black line that should not appear because doesn't exist in the scene The black pixel line in the rendered image is a bug of the mask ![Captura_de_pantalla_de_2015-03-06_19:20:59.jpg](https://archive.blender.org/developer/F147568/Captura_de_pantalla_de_2015-03-06_19_20_59.jpg)
Author

Open the .blend file:
Bug_line_2.blend
Press F12 (render) and press esc to return to nodes editor, see the image
There are a pixel line on the right side of the image
bug_2.jpg

Open the .blend file: [Bug_line_2.blend](https://archive.blender.org/developer/F147573/Bug_line_2.blend) Press F12 (render) and press esc to return to nodes editor, see the image There are a pixel line on the right side of the image ![bug_2.jpg](https://archive.blender.org/developer/F147571/bug_2.jpg)

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Confirmed on latest head (b7a7595).

Confirmed on latest head (b7a7595).
Julian Eisel self-assigned this 2015-03-07 18:23:30 +01:00
Member

Assigning to me for further investigation.

Assigning to me for further investigation.
Julian Eisel removed their assignment 2015-03-07 22:57:02 +01:00
Sergey Sharybin was assigned by Julian Eisel 2015-03-07 22:57:02 +01:00
Member

Okay so this is caused by 4c75f77669 so we have to call Sergey for the rescue again!

Okay so this is caused by 4c75f776690cfe so we have to call Sergey for the rescue again!

This issue was referenced by 2ae0f1e70b

This issue was referenced by 2ae0f1e70be543b37f426dc1b7d8a44b05301faf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2ae0f1e70b.

Closed by commit 2ae0f1e70b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43908
No description provided.